frontend-ingress-tls/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: aleroawani/buysale-frontend:latest
          ports:
            - containerPort: 3030
          # resources:
          #   requests:
          #     memory: 1Gi
          #     cpu: 100m
          #   limits:
          #     memory: 1Gi
          #     cpu: 100m
