frontend-ingress-tls/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: frontend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 3030
  selector:
    app: frontend
